# ebook-wgpu-voxel-terrain

./: Cargo.toml  README.md
examples/ch01/: noise3d.wgsl  shader_frag.wgsl  shader_vert.wgsl  voxel_terrain.rs  voxel_terrain.wgsl  voxel_value.wgsl
examples/ch02/: volcano.rs  volcano_comp.wgsl  volcano_value.wgsl
examples/ch03/: minecraft.rs  minecraft_comp.wgsl  minecraft_vert.wgsl
src/: colormap.rs  lib.rs  marching_cubes_table.rs  math_func.rs  surface_data.rs
