[package]
name = "wgpu_voxel_terrain"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.17.1"
cgmath = "0.18"
env_logger = "0.10"
futures = "0.3"
gfx-hal = "0.9"
image = "0.23"
log = "0.4"
pollster = "0.2"
winit = "0.28" 
anyhow = "1.0"
rand = "0.8"
bytemuck = { version = "1.13", features = ["derive"] }
wgpu_simplified = { git = "https://github.com/jack1232/wgpu_simplified" }

[[example]]
name = "voxel_terrain"
path = "examples/ch01/voxel_terrain.rs"

[[example]]
name = "volcano"
path = "examples/ch02/volcano.rs"

[[example]]
name = "minecraft"
path = "examples/ch03/minecraft.rs"
